# dmjone_pypi

./: README.md  pyproject.toml
src/dmjone/: StudentManagementSystem.py  __init__.py
src/dmjone/kamaksha/: 8bitgame.py
src/dmjone/lakshika/: __init__.py
src/dmjone/pankajvaidya/: check.py
src/dmjone/rijul/: snakegame.py
